# gwayland

./: .gitignore  meson.build
include/: gwl-display.h  gwl-import.h  gwl-registry-private.h  gwl-registry.h  gwl.h  meson.build
src/: gwayland.c  gwl-display.c  gwl-registry.c  meson.build
test/: display-test.c  gwayland-test.c  gwayland_test.c  meson.build  registry-test.c  tests.h
